# openjarvis

./: .gitignore  CLAUDE.md  pyproject.toml
nanobot/channels/: http_api.py  (+1 more)
openjarvis/: Dockerfile_openjarvis  Makefile  docker-compose_openjarvis.yml  docker-compose_openjarvis_live.yml  ican1指令.md  ican2交易系统.md  ican2指令.md  ican3交易系统.md  ican交易系统.md  ican指令.md  pyproject.toml
openjarvis/server/: __init__.py  __main__.py  cli.py
openjarvis/server/api/: auth.py  deps.py  gateway.py  models.py  provider_meta.py  server.py  users.py
openjarvis/server/api/routes/: __init__.py  auth.py  channels.py  config.py  cron.py  dashboard.py  files.py  mcp.py  providers.py  sessions.py  skills.py  users.py  ws.py
openjarvis/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
openjarvis/web/src/: index.css
openjarvis/web/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  ThinkingBlock.tsx  ToolCallCard.tsx
openjarvis/web/src/components/layout/: Sidebar.tsx
openjarvis/web/src/components/shared/: SetupGuideDialog.tsx  StatusBadge.tsx
openjarvis/web/src/hooks/: useConfig.ts  useCron.ts  useDashboard.ts  useSessions.ts  useSkills.ts
openjarvis/web/src/i18n/: index.ts
openjarvis/web/src/i18n/locales/: en.json  zh.json
openjarvis/web/src/lib/: channelIcons.ts
openjarvis/web/src/pages/: Chat.tsx  CronJobs.tsx  Dashboard.tsx  Login.tsx  MCPServers.tsx  Settings.tsx  Skills.tsx  SystemConfig.tsx  Users.tsx
openjarvis/web/src/stores/: chatStore.ts
website/: .env.example  index.html  package-lock.json  package.json  vite.config.js
(+81 files in other folders)
